statum-macros/tests/ui/invalid_validators_wrong_return.stderr
error: Error: validator `is_in_progress` for `impl DbRow` rebuilding `TaskMachine` state `TaskState::InProgress` must return `Result<Progress, _>` (or an equivalent alias), but found `Result < (), statum_core :: Error >` with payload `()`.
  --> tests/ui/invalid_validators_wrong_return.rs:44:33
   |
44 |     fn is_in_progress(&self) -> Result<(), statum_core::Error> {
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_wrong_return.rs:52:2
   |
52 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_wrong_return.rs`
